<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_color_1"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/findCarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_2"
        android:text="@string/find_your_cars"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/welcomeText"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <LinearLayout
        android:id="@+id/searchLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/findCarText">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/text_color_3"
            android:layout_marginEnd="10dp"
            android:layout_weight="20"
            android:hint="@string/search_cars"
            android:background="@drawable/edittext_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:clickable="true"
            android:padding="10dp"
            android:background="@drawable/edit_background"
            android:drawablePadding="-4dp"
            app:drawableStartCompat="@drawable/ic_car" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/carsLogoLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLinear">

        <LinearLayout
            android:id="@+id/bmwLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/edittext_background">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bmw" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/mercedesLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="22dp"
            android:padding="10dp"
            android:background="@drawable/edittext_background">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/mercedes" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ferrariLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="22dp"
            android:padding="10dp"
            android:background="@drawable/edittext_background">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ferrari" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lamborghiniLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="22dp"
            android:padding="10dp"
            android:background="@drawable/edittext_background">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/lamborghini" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/carsLogoLinear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@color/white"
            android:text="BMW" />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="Mercedes" />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Ferrari" />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="Lambo" />
    </LinearLayout>

    <TextView
        android:id="@+id/availableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_2"
        android:text="@string/available_car_s"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/carsLogoLinear"
        app:layout_constraintTop_toBottomOf="@id/chipGroup" />

    <HorizontalScrollView
        android:id="@+id/carsAvailableScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/availableText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/bmwCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/edittext_background">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:src="@drawable/bmwcar" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/bmw_5_series_coupe"
                    android:textColor="@color/text_color_1"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_250_day"
                    android:textColor="@color/text_color_3"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mercedesCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="14dp"
                android:padding="10dp"
                android:background="@drawable/edittext_background">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:src="@drawable/mercedescar" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/mercedes_benz_s_class"
                    android:textColor="@color/text_color_1"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_280_day"
                    android:textColor="@color/text_color_3"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/audiCars"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="14dp"
                android:padding="10dp"
                android:background="@drawable/edittext_background">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:src="@drawable/audicar" />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/audi_a4"
                    android:textColor="@color/text_color_1"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_250_day"
                    android:textColor="@color/text_color_3"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/bestCarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_2"
        android:text="@string/best_car_s"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/carsLogoLinear"
        app:layout_constraintTop_toBottomOf="@id/carsAvailableScroll" />

    <LinearLayout
        android:id="@+id/ferrariBestCar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bestCarText"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginStart="18dp"
            android:src="@drawable/ferraricar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ferrari_458_speciale"
                android:textColor="@color/text_color_1"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport_fast"
                android:textStyle="bold"
                android:textColor="@color/text_color_3" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_400"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/text_color_1" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_menu"
        android:background="@drawable/bottom_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>